# web_module_08

./: README.md  app_parser.py  config_part_2.ini  main.py  pyproject.toml
part_1/: app_parser.py  create.py  db.py  main.py  models.py  search_script.py
part_2/: consumer_email.py  consumer_sms.py  db.py  models.py  producer.py  seeds.py
